# MEX-Quad

./: README.md
aick/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
aick/src/: aick_node.cpp  aick_node2.cpp
controls/: CMakeLists.txt  package.xml
controls/src/: failsafe_node.cpp
ekz-public-lib/: .CMakeLists.txt.swp  CMakeLists.txt  CMakeLists.txt~  package.xml
ekz-public-lib/include/: ekz.h~
ekz-public-lib/include/FrameMatcher/: BowAICK.h  FrameMatcher.h  ICP.h
ekz-public-lib/include/Map/: Map3D.h  Map3D.h~
ekz-public-lib/src/FeatureDescriptor/: OrbFeatureDescriptor.cpp
ekz-public-lib/src/FrameMatcher/: BowAICK.cpp  ICP.cpp
ekz-public-lib/src/Map/: Map3D.cpp
ekz-public-lib/src/apps/: AICK_fast_map.cpp  ICP_fast_map.cpp  aick_node.cpp  example_bow_images.cpp  example_register_images_fast_key_map.cpp  example_register_images_fast_map.cpp  example_register_images_fast_skip_map.cpp  example_register_images_map.cpp  example_register_images_map.cpp~  example_register_pcd_map.cpp  publishPointClouds.cpp
ekz-public-lib/src/core/: FrameInput.cpp  RGBDFrame.cpp
main/: CMakeLists.txt  package.xml
main/launch/: tf.launch  tf.launch~
positioncontrol/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
positioncontrol/src/: fakePose_node.cpp  positioncontrol_node.cpp
quadcopter/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
vision/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
vision/src/: preProcessing_node.cpp
