<?xml version="1.0"?>
<package>
  <name>quadcopter</name>
  <version>1.0.0</version>
  <description>Master Thesis - Autonomous Quadcopter</description>

  <maintainer email="jacobgre@kth.se">Jacob Greenberg</maintainer>



  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <url type="repository"></url>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
